Upload: Input number spinners no longer display on Firefox

--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -14,6 +14,10 @@
   margin: 0; 
 }
 
+#upload input[type=number] {
+    -moz-appearance:textfield;
+}
+
 #upload #season, #upload #episode {
     padding: 4px 4px 4px 7px;
     width: 20px;
